--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
-    "name": "gametemplete",
-    "version": "1.0.0",
-    "description": "templete of node games",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "webpack": "webpack-cli -w",
-        "typings": "typings search jquery"
-    },
-    "author": "",
-    "license": "MIT",
-    "dependencies": {
-        "pixi-filters": "^3.2.2",
-        "pixi-sound": "^3.0.5",
-        "pixi.js": "^5.3.7"
-    },
-    "devDependencies": {
-        "@types/typescript": "^2.0.0",
-        "typescript": "^4.1.3",
-        "webpack": "^5.45.1",
-        "webpack-cli": "^4.7.2"
-    }
+  "name": "gametemplete",
+  "version": "1.0.0",
+  "description": "templete of node games",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack-cli -w",
+    "typings": "typings search jquery",
+    "start": "webpack"
+  },
+  "author": "",
+  "license": "MIT",
+  "dependencies": {
+    "pixi-filters": "^3.2.2",
+    "pixi-sound": "^3.0.5",
+    "pixi.js": "^5.3.7",
+    "ts-loader": "^9.2.3"
+  },
+  "devDependencies": {
+    "@types/typescript": "^2.0.0",
+    "typescript": "^4.3.5",
+    "webpack": "^5.45.1",
+    "webpack-cli": "^4.7.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HarumaroJP/pron-scrap.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/HarumaroJP/pron-scrap/issues"
+  },
+  "homepage": "https://github.com/HarumaroJP/pron-scrap#readme"
 }
