--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "pixi-filters": "^3.2.2",
     "pixi-sound": "^3.0.5",
+    "pixi-textinput-v5": "^4.0.0-beta.10",
     "pixi.js": "^5.3.7",
     "ts-loader": "^9.2.3"
   },
