--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "typings": "typings search jquery",
     "start": "webpack"
   },
+  "browser": {
+    "fs": false
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^16.9.0",
     "axios": "^0.21.3",
+    "gsap": "^3.7.1",
     "pixi-filters": "^3.2.2",
     "pixi-sound": "^3.0.5",
     "pixi-textinput-v5": "^4.0.0-beta.10",
