--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
-    "compilerOptions": {
-        "module": "commonJS",
-        "target": "ES2015",
-        "noImplicitAny": false,
-        "sourceMap": true
-    },
-    "exclude": ["node_modules"]
+  "compilerOptions": {
+    "module": "commonJS",
+    "target": "ES2015",
+    "noImplicitAny": false,
+    "sourceMap": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "esModuleInterop": true
+  },
+  "exclude": ["node_modules"]
 }
